6855215: Calculation error (NaN) after about 1500 calculations

Reviewed-by: kvn